update patient md side, html on tool/report , html update staff (pero search chuchu)

--- a/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/certificate-pdf.html
+++ b/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/certificate-pdf.html
@@ -155,6 +155,7 @@ footer {
 
 <body>
   <header class="clearfix">
+    <img src="{% static 'images/cert-header.PNG' %}">
     <br> <br>
     <h1>Vaccine Certificate</h1>
     <div id="company" class="clearfix">
