--- a/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/patient-profile.html
+++ b/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/patient-profile.html
@@ -123,7 +123,7 @@
                 </table>
                 <div class="d-grid gap-2 d-md-flex justify-content-md-end">
           <!--<a href="{% url 'update-patient-profile' record.pk %}">-->
-                    <a href="#">     
+                    <a href="{% url 'update-profile' record.pk %}">     
                     <button class="btn btn-success" id="submit_button" type="submit">
                       <i class="fas fa-save"></i>
                       Update
