--- a/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/tool/staff.html
+++ b/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/tool/staff.html
@@ -16,13 +16,13 @@
         style="color: black"
         > Create Staff </button>
         </li>
-        <li>
+        <li><a href="{% url 'update-staff' %}">
           <button
           class="btn btn-sm"
           data-bs-toggle="modal"
           data-bs-target="#update-staff"
           style="color: black"
-          > Update Staff </button>
+          > Update Staff </button></a>
         </li>  
       </ul>
     </th>
