--- a/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/tool/report.html
+++ b/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/tool/report.html
@@ -36,18 +36,18 @@
                 <br><br>
                 </div>
                 <div>
-                    <table class="table table-bordered table-sm border-dark">
+                    <table class="table table-bordered table-sm border-dark text-center">
                       <tr>
                         <td colspan="2"></td>
-                        <td class="table-secondary  border-dark">w/ Appointments</td>
+                        <td class="table-secondary border-dark text-center " colspan="2">w/ Appointments</td>
                         <td></td>
                       </tr>
                       <tr>
                         <td class="table-secondary border-dark"><b>Vaccine</b></td>
-                        <td class="table-secondary border-dark"><b>No. of PTs</b></td>
+                        <td class="table-secondary border-dark"><b>No. of Patients</b></td>
                         <td class="table-secondary border-dark"><b>Confirmed</b></td>
-                        <td class="table-secondary border-dark"><b>No Confirm</b></td>
-                        <td class="table-secondary border-dark"><b>No Appt</b></td>
+                        <td class="table-secondary border-dark"><b>Not Confirmed</b></td>
+                        <td class="table-secondary border-dark"><b>No Appointments</b></td>
                       </tr>
                       <tr>
                         <td>BCG</td>
@@ -183,6 +183,20 @@
     </div>
           <br><br><br><br><br>
   </div>    
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 {% endblock %}
