--- a/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/update-patient-profile.html
+++ b/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/update-patient-profile.html
@@ -98,7 +98,14 @@
                   </tr>
                   <tr>
                     <td class="table-warning" colspan="2"><b>EMERGENCY CONTACT</b></td>
-                    <td class="table-warning" colspan="8">Same as parent information *insert checkbox* </td>
+                    <td class="table-warning" colspan="8">
+                    <div class="form-check">
+                      <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                      <label class="form-check-label" for="flexCheckDefault">
+                        Same as parent information
+                      </label>
+                    </div>
+                   </td>
                   </tr>
                   <tr>
                     <td class="table-warning">Name:</td>
