--- a/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/tool/update-staff.html
+++ b/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/tool/update-staff.html
@@ -51,7 +51,7 @@
 		<div class="card card-body">
 			<h5 class="card-title">Results
 			</h5>
-			<table class="table table-primary table-striped table-bordered table-sm table-hover ">
+			<table class="table table-secondary table-striped table-bordered table-sm table-hover ">
 				
 					<tr class=" align-middle">
 						<th>Title</th>
