--- a/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/vaccine-certificate.html
+++ b/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/vaccine-certificate.html
@@ -2,7 +2,7 @@
 {% block content %} {% load static %}
 
 <p style="background-color:hsla(198, 13%, 85%, 0.89); padding-left: 1%;">
-  {{ record.first_name|upper }} {{ record.last_name|upper }}  |  ({{record.nick_name|upper}})  |  {{ record.age|upper }} | {{ record.gender|upper }} | {{ record.bday|upper }}
+  {{ record.first_name|upper }} {{ record.last_name|upper }}  |  ({{record.nick_name|upper}})  |  {{years|upper}} Years {{months|upper}} Months {{days|upper}} Days | {{ record.gender|upper }} | {{ record.bday|upper }}
 </p>
 
 <div class="container-fluid">
@@ -20,7 +20,7 @@
                 <br>
                 <div class="row" >
                   <div class="col">This is to certify that {{ record.first_name }} {{ record.middle_name }} {{ record.last_name }}, 
-                      {{ record.age}}, of {{ record.city }} City has completed the following vaccinations. This certificate is being
+                      {{years}} Years {{months}} Months {{days}} Days, of {{ record.city }} City has completed the following vaccinations. This certificate is being
                       issued upon the request of the above mentioned for whatever purpose it may serve, except those of a medico-legal-nature.
                       <br> <br>
                       {{ record.doctor_assigned }} 
