--- a/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/tool/reminder.html
+++ b/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/tool/reminder.html
@@ -4,6 +4,43 @@
 
 {% include 'vaccinerecordapp/staff-navbar.html' %}
 
+<div class="row">
+    <table class="table table-primary table-striped table-bordered table-sm table-hover">
+				
+        <tr>
+            <th>Record #</th>
+            <th>First Name</th>
+            <th>Last Name</th>
+            <th>Date of Birth</th>
+        </tr>
+        {% for patient in patients %}
+        
+        <tr>
+            <td> <a href="{% url 'reminder-vaccines' patient.id %}" >{{patient.id}}</a></td>
+            <td> <a href="{% url 'reminder-vaccines' patient.id %}" >{{patient.first_name}}</a></td>
+            <td> <a href="{% url 'reminder-vaccines' patient.id %}" >{{patient.last_name}}</a></td>
+            <td> <a href="{% url 'reminder-vaccines' patient.id %}" >{{patient.bday|date:"m/d/Y"}}</a></td>
+        </tr>
+        {% endfor %}
+    
+    </table>
+    <table class="table table-primary table-striped table-bordered table-sm table-hover">
+				
+        <tr>
+            <th>First Name</th>
+            <th>Last Name</th>
+        </tr>
+        {% for vaccine in vaccines %}
+        
+        <tr>
+            <td>{{vaccine}}</td>
+        </tr>
+        {% endfor %}
+    
+    </table>
+</div>
+
+
 
 
 {% endblock %}
