--- a/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/staff-navbar.html
+++ b/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/staff-navbar.html
@@ -3,7 +3,7 @@
 
 <ul class="nav flex-column" style="background-color:#e3f2fd;">
     <li class="report">
-      <a class="nav-link active" href="{% url 'report' %}">Report</a>
+      <a class="nav-link active" href="{% url 'tool' %}">Report</a>
     </li>
     <li class="reminder">
       <a class="nav-link" href="{% url 'reminder' %}">Reminder</a>
