--- a/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/tool/tool.html
+++ b/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/tool/tool.html
@@ -17,23 +17,32 @@
           <div class="card border-info" style="margin-left: 5%; margin-right: 5%">
               <div class="card-body">
                 <div>
-                    <br>
+                    <br><br>
                     <form method="get">
                       <div class="row">
-                        <div class="col-sm-2"></div>
+                        <div class="col-sm-1"></div>
                         <div class="col-sm-3">
-                          <label for="from">From:</label>
+                          <div class="input-group">
+                          <span class="input-group-text">From:</span>
                           <input type="text" class="form-control" id="from" placeholder="mm/dd/yyyy" aria-label="mm/dd/yyyy">
+                          </div>
                         </div>
-                        <div class="col-sm-2"></div>
+                        <div class="col-sm-1"></div>
                         <div class="col-sm-3">
-                          <label for="to">To:</label>
+                          <div class="input-group">
+                          <span class="input-group-text">To:</span>
                           <input type="text" class="form-control" id="to" placeholder="mm/dd/yyyy" aria-label="mm/dd/yyyy">
+                          </div>
                         </div>
-                        <div class="col-sm-2"></div>
+                        <div class="col-sm-1"></div>
+                        <div class="col-sm-3">
+                          <button class="btn btn-secondary" type="submit">
+                          <i class="fas fa-search"></i>
+                          Find</button></div>
                       </div>
+                      
                     </form>
-                <br><br>
+                <br>
                 </div>
                 <div>
                     <table class="table table-bordered table-sm border-dark text-center">
@@ -163,6 +172,13 @@
                       </tr>
                       <tr>
                         <td>HPV</td>
+                        <td>1</td>
+                        <td>2</td>
+                        <td>3</td>
+                        <td>4</td>
+                      </tr>
+                      <tr>
+                        <td>Annual Flu</td>
                         <td>1</td>
                         <td>2</td>
                         <td>3</td>
