--- a/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/patient-navbar.html
+++ b/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/patient-navbar.html
@@ -1,7 +1,7 @@
 {% load static %} {% load auth_extras %}
 
 <div class="d-flex align-items-start">
-<ul class="nav flex-column " style="background-color:#e3f2fd;;">
+<ul class="nav flex-column " style="background-color:#e3f2fd;">
   {% if request.user|has_group:"staff" or request.user|has_group:"doctor"%}
     <li class="profile">
       <a class="nav-link active" href="{% url 'patient-profile' record.pk %}">Profile</a>
